// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.panelmatch.client.privatemembership;

option java_package = "org.wfanet.panelmatch.client.privatemembership";
option java_multiple_files = true;
option java_outer_classname = "QueryProto";

message ShardId {
  int32 id = 1;
}

message BucketId {
  int32 id = 1;
}

// These cannot be randomly generated. For 30k QueryIds, the odds of collision
// in 32 bit space are 1/10.
message QueryId {
  int32 id = 1;
}

// A full or partial set of oblivious queries for a single database shard.
message QueryBundle {
  ShardId shard_id = 1;
  repeated QueryMetadata query_metadata = 2;

  // TODO: document payload format.
  bytes payload = 3;
}

// Identifier and metadata for an oblivious query.
message QueryMetadata {
  QueryId query_id = 1;

  // TODO: document metadata format.
  bytes metadata = 2;
}

// Some key maintained by a model provider to identify a panelist
message PanelistKey {
  fixed64 id = 1;
}

// The agreed upon join key used for double blind exchange and query lookup
message JoinKey {
  bytes key = 1;
}
